# Startpage

./: .dockerignore  .env  .eslintrc.json  .gitignore  Dockerfile  Hex converter.js  README.md  Startpage.xml  bun.lockb  common.ts  docker-compose.yml  dockerfile  framer-features.ts  justfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  test.ts  tsconfig.json  utils.ts  workspace.code-workspace
.github/: workflows
.github/workflows/: Dev Docker Image CI .yml  Docker Image CI.yml  docker-publish.yml
client/: .env.development  .eslintcache  package-lock.json  package.json  tailwind.config.js
client.old/: .env.development  package-lock.json  package.json  tailwind.config.js
client/public/: index.html
components/: App.tsx  Button.tsx  ConfirmationModal.tsx  Input.tsx  ListBox.tsx  SettingsButton.tsx  SettingsButtons.tsx  Toggle.tsx  WeatherDisplay.tsx
data/: config.json
data.test/: config.json
interfaces/: BasicWeatherDataResponse.ts  Cache.ts  Config.ts  Extension.ts  IconifySearchResponse.ts  ListBoxOption.ts  TimerDigit.ts  Weather.ts  WeatherData.ts  WeatherDataResponse.ts
pages/: _app.js  _app.tsx  _document.tsx  index.tsx  settings.tsx
server/: app.py  caching.py  pyproject.toml  requirements.txt
server/models/: HueGroup.py  HueLight.py  configModel.py  coordinates.py  weather.py
server/routes/: philipsHue.py
server/services/: iconifyService.py  philipsHueService.py  weatherService.py
services/: Iconify.ts  cache.ts  config.ts
styles/: globals.css
types/: common.ts
(+299 files in other folders)
