[tool.poetry]
name = "server"
version = "2.0.0"
description = "My custom startpage"
authors = ["Reid Mason <maddogshain132@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
phue = "^1.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
